--- a/package.json
+++ b/package.json
@@ -12,14 +12,28 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.7",
+    "@angular/cdk": "^8.2.3",
     "@angular/common": "~8.2.7",
     "@angular/compiler": "~8.2.7",
-    "@angular/core": "~8.2.7",
+    "@angular/core": "~8.2.14",
+    "@angular/fire": "0.0.0",
     "@angular/forms": "~8.2.7",
     "@angular/platform-browser": "~8.2.7",
     "@angular/platform-browser-dynamic": "~8.2.7",
     "@angular/router": "~8.2.7",
+    "@fortawesome/fontawesome-free": "^5.13.0",
+    "@types/chart.js": "^2.9.21",
+    "angular-bootstrap-md": "^8.10.1",
+    "angular2-notifications": "^9.0.0",
+    "angularfire2": "^4.0.0-rc.1",
+    "animate.css": "^4.1.0",
+    "bootstrap": "^4.5.0",
+    "chart.js": "^2.5.0",
+    "firebase": "^4.2.0",
+    "hammerjs": "^2.0.8",
+    "ngx-spinner": "^9.0.2",
     "rxjs": "~6.4.0",
+    "rxjs-compat": "^6.5.5",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
